# pymodins

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  SECURITY.md  google136394d90a4d912a (1).html  module_installation_log.txt  pyproject.toml  setup.py  var _yt_player={};(function(g){var windo.csv
docs/: .readthedocs.yaml
docs/source/: index.rst
docs/source/_static/: custom.css
pymodins/: __init__.py  __main__.py  installer.py  linux.py  testing.py  ui.py
pymodins.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
source/: conf.py  index.rst  requirements.txt
source/_static/: animation.js  custom.css
